--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header"></div>
-    <div class="sidebar"></div>
-    <div class="main-content-containers"></div>
+        <div class="header">header</div>
+        <div class="sidebar">sidebar</div>
+        <div class="main-content-containers">main containers</div>
 </body>
 </html>
