created more container cards

--- a/index.html
+++ b/index.html
@@ -8,7 +8,51 @@
 </head>
 <body>
         <div class="header">header</div>
-        <div class="sidebar">sidebar</div>
-        <div class="main-content-containers">main containers</div>
+        <div class="sidebar">
+            <div class="dashboard-logo">DashBoard</div>
+                <div class="top-menu">
+                    <ul>
+                    <div class="menu-button"><li>home</li></div>
+                    <div class="menu-button"><li>profile</li></div>
+                    <div class="menu-button"><li>mesages</li></div>
+                    <div class="menu-button"><li>history</li></div>
+                    <div class="menu-button"><li>tasks</li></div>
+                    <div class="menu-button"><li>communities</li></div>
+                    </ul>
+                </div>
+                <div class="bottom-menu">
+                    <ul>
+                    <div class="menu-button"><li>settings</li></div>
+                    <div class="menu-button"><li>support</li></div>
+                    <div class="menu-button"><li>privacy</li></div>
+                    </ul>
+                </div>
+        </div>
+        <div class="container">
+                <div class="card">
+                    <p class="title">Article Title</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                </div>
+                <div class="card">
+                    <p class="title">Article Title</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                 </div>
+                <div class="card">
+                    <p class="title">Article Title</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                </div>
+                <div class="card">
+                    <p class="title">Article Title</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                 </div>
+                <div class="card">
+                    <p class="title">Article Title</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                </div>
+                <div class="card">
+                    <p class="title">Article Title</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                </div>
+        </div>
 </body>
 </html>
