added a class for all the sidebar menus

--- a/index.html
+++ b/index.html
@@ -9,22 +9,47 @@
 <body>
         <div class="header">header</div>
         <div class="sidebar">
-            <div class="dashboard-logo">DashBoard</div>
+            <div class="dashboard-logo">
+                <img src="img/view-dashboard.png" alt="" class="dashboard-img">
+                    DashBoard
+            </div>
                 <div class="top-menu">
                     <ul>
-                    <div class="menu-button"><li>home</li></div>
-                    <div class="menu-button"><li>profile</li></div>
-                    <div class="menu-button"><li>mesages</li></div>
-                    <div class="menu-button"><li>history</li></div>
-                    <div class="menu-button"><li>tasks</li></div>
-                    <div class="menu-button"><li>communities</li></div>
+                    <div class="menu-button">
+                        <img src="/img/home.png" alt="home image" class="side-button">
+                            <li>Home</li>
+                    </div>
+                    <div class="menu-button">
+                        <img src="/img/account.png" alt="home image" class="side-button">
+                            <li>Profile</li></div>
+                    <div class="menu-button">
+                        <img src="/img/message.png" alt="home image" class="side-button">
+                            <li>Mesages</li></div>
+                    <div class="menu-button">
+                        <img src="/img/clock-time-three-outline.png" alt="home image" class="side-button">
+                            <li>History</li></div>
+                    <div class="menu-button">
+                        <img src="/img/file.png" alt="home image" class="side-button">
+                            <li>Tasks</li></div>
+                    <div class="menu-button">
+                        <img src="/img/account-group.png" alt="home image" class="side-button">
+                            <li>Communities</li>
+                    </div>
                     </ul>
                 </div>
                 <div class="bottom-menu">
                     <ul>
-                    <div class="menu-button"><li>settings</li></div>
-                    <div class="menu-button"><li>support</li></div>
-                    <div class="menu-button"><li>privacy</li></div>
+                    <div class="menu-button">
+                        <img src="img/cog-outline.png" class="side-button">
+                                <li>Settings</li>
+                    </div>
+                    <div class="menu-button">
+                        <img src="img/message-question-outline.png" class="side-button">
+                            <li>Support</li>
+                    </div>
+                    <div class="menu-button">
+                        <img src="img/shield-check-outline.png" alt="" class="side-button">
+                            <li>Privacy</li></div>
                     </ul>
                 </div>
         </div>
