added a new div for the card images to make padding for images in card, also added img source for pictures in card div

--- a/index.html
+++ b/index.html
@@ -56,27 +56,69 @@
         <div class="container">
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud...</p>
+                    <div class="card-img">
+                        <img src="img/star-outline.png" alt="star" class="card-button">
+                        <img src="img/share-outline.png" alt="share" class="card-button">
+                        <img src="img/comment-text-outline.png" alt="message" class="card-button">
+                    </div>
                 </div>
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud...</p>
+                    <div class="card-img">
+                        <img src="img/star-outline.png" alt="star" class="card-button">
+                        <img src="img/share-outline.png" alt="share" class="card-button">
+                        <img src="img/comment-text-outline.png" alt="message" class="card-button">
+                    </div>
                  </div>
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud...</p>
+                    <div class="card-img">
+                        <img src="img/star-outline.png" alt="star" class="card-button">
+                        <img src="img/share-outline.png" alt="share" class="card-button">
+                        <img src="img/comment-text-outline.png" alt="message" class="card-button">
+                    </div>
                 </div>
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud...</p>
+                    <div class="card-img">
+                        <img src="img/star-outline.png" alt="star" class="card-button">
+                        <img src="img/share-outline.png" alt="share" class="card-button">
+                        <img src="img/comment-text-outline.png" alt="message" class="card-button">
+                    </div>
                  </div>
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud...</p>
+                    <div class="card-img">
+                        <img src="img/star-outline.png" alt="star" class="card-button">
+                        <img src="img/share-outline.png" alt="share" class="card-button">
+                        <img src="img/comment-text-outline.png" alt="message" class="card-button">
+                    </div>
                 </div>
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud...</p>
+                    <div class="card-img">
+                        <img src="img/star-outline.png" alt="star" class="card-button">
+                        <img src="img/share-outline.png" alt="share" class="card-button">
+                        <img src="img/comment-text-outline.png" alt="message" class="card-button">
+                    </div>
                 </div>
         </div>
 </body>
