added header-top search label, search img, bell img, ryan img into html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-        <div class="header">header</div>
+        <div class="header">
+                <div class="header-top">
+                    <img src="img/magnify.png" alt="search image" class="search-img">
+                        <form action="http://127.0.0.1:5500/index.html" class="search">
+                            <label for="search-bar"></label>
+                            <input type="search" name="search-bar">
+                        </form>
+                    <img src="img/bell-ring-outline.png" alt="bell ring" class="bell-img">
+                    <img src="img/ryan.png" alt="pfp" class="pfp-top">
+                    <p2>Ryan Kakao</p2>
+                </div>
+        </div>
         <div class="sidebar">
             <div class="dashboard-logo">
                 <img src="img/view-dashboard.png" alt="" class="dashboard-img">
