added a diff container to fit all the objects into the header grid, also added welcome div for ryan pfp and messages

--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
 </head>
 <body>
         <div class="header">
-                <div class="header-top">
-                    <img src="img/magnify.png" alt="search image" class="search-img">
+                <div class="search-container">
+                    <img src="img/magnify.png" alt="search image" class="top-search-img">
                         <form action="http://127.0.0.1:5500/index.html" class="search">
                             <label for="search-bar"></label>
                             <input type="search" name="search-bar">
                         </form>
+                </div>
+                <div class="profile-container">
                     <img src="img/bell-ring-outline.png" alt="bell ring" class="bell-img">
                     <img src="img/ryan.png" alt="pfp" class="pfp-top">
                     <p2>Ryan Kakao</p2>
+                </div>
+                <div class="welcome-container">
+                    <img src="img/ryan.png" alt="large profile pic" class="ryan-welcome">
+                    <div class="hi">Hi there,</div>
+                    <div class="ryan">Ryan Kakao (@RyanKakao4579)</div>
+
                 </div>
         </div>
         <div class="sidebar">
